--- a/script.html
+++ b/script.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>
+        welcome
+    </h1>
     <script>
         let date=new Date().getDay();
         console.log(date);
